  and regex fixed to only match when the B and C digits are the same, so
  800 is toll-free, 888 is toll-free, but 808 is not.

- Workaround: OFCOM have the wrong number length for the +44 800 716 range,
  we now have an egregious hack to work around that. See
  https://github.com/DrHyde/perl-modules-Number-Phone/issues/112

- Data updates

3.8007    2022-12-02

- Data updates

3.8006    2022-09-03

- Data updates

- No longer auto-tested on 5.8 because a 'make dist'-time dependency (XML::XPath)
  no longer supports that.

3.8005    2022-06-01

- Data updates only

3.8004    2022-03-07

- Fix test failure that only occurred if Number::Phone::JP was installed
  (it doesn't have exactly the data we expect from ...::StubCountry::JP)

- Data updates from OFCOM

3.8003    2022-03-05

- New Canadian area codes
- +882 34 recognised as Antarctica, via Global Networks Switzerland

3.8002    2021-12-06

- Fix Makefile.PL to not consume arguments that my code doesn't know about but
  which are relevant to EU::MM (https://github.com/DrHyde/perl-modules-Number-Phone/pull/106)

- Explicitly open databases read-only so it works on a RO filesystem
  (https://github.com/DrHyde/perl-modules-Number-Phone/issues/107)

- Data updates

3.8001    2021-09-21

- Tweak build to use more compatible options to tar(1) so some really old tars
  can read the archive correctly

3.8000    2021-09-19

- Bugfix for numbers in local format which may be ambiguous for UK Crown Dependencies
  when using Number::Phone::Lib

- Bugfix for when you ask for an object representing a number in one country
  but provide a number for a different country. This mostly affects countries
  that contain other jurisdictions squatting on parts of their number plan,
  such as the Vatican in the Italian plan, and the Crown Dependencies in the UK
  plan. It is now an error to ask for an object representing a number in a
  'sub-country' which isn't valid in that sub-country (eg asking for a Jersey